:metal: DNE 15 published :)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
         <div class="links-holder">
           <h3>Quer ganhar um mês curso do alura?</h3>
           <p>
-            Link para participar: <a href="http://devnaestrada.typeform.com/to/QUBAdE">http://devnaestrada.typeform.com/to/QUBAdE</a>
+            Participe Presente do Alura: <a href="http://devnaestrada.typeform.com/to/QUBAdE">Clique aqui</a>
           </p>
         </div>
 
