--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@ layout: default
     <h3 class="erroMessage">Porque essa não é a página que você procura.</h3>
   </hgroup>
   <figure>
-    <img class="erroImg" src="404.png" alt="Error 404" title="ERRO 404 - Não pudemos achar a página que procura.">
+    <img class="erroImg" src="{{ "public/assets/img/" | prepend: site.baseurl }}" alt="Error 404" title="ERRO 404 - Não pudemos achar a página que procura.">
   </figure>
 </div>
