Added a mini-store :)

--- a/mini-loja.html
+++ b/mini-loja.html
@@ -1,26 +1,24 @@
 ---
 layout: page
 css_class: mini-loja
-title: "Camisetas DevNaEstrada"
-permalink: /mini-loja.html
+title: ""
+permalink: /mini-loja
 ---
+<div class="component-store">
+  <h2 class="store-subtitle">Camisetas Front-end</h2>
+  {% include modules/product.html data=site.products.frontend %}
+</div>
 
-<ul class="tshirt-list">
-  <li>
-    <div class="tshirt__holder">
-      <p class="tshirt__name">
-        Camiseta FrontStyle DNE
-      </p>
-      <p class="tshirt__size">
-        Tamanho: P
-      </p>
-      <p class="tshirt__stock">
-        Estoque: limitado
-      </p>
-      <form action="https://pagseguro.uol.com.br/checkout/v2/payment.html" method="post">
-        <input type="hidden" name="code" value="BDD751A97F7FE8EFF4D4FF9D922F5FA8" />
-        <input type="image" src="https://stc.pagseguro.uol.com.br/public/img/botoes/pagamentos/99x61-comprar-laranja-assina.gif" name="submit" alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
-      </form>
-    </div>
-  </li>
-</ul>
+<div class="component-store">
+  <h2 class="store-subtitle">Camisetas Back-end</h2>
+  {% include modules/product.html data=site.products.backend %}
+</div>
+
+<div class="component-store">
+  <h2 class="store-subtitle">Camisetas Classic</h2>
+  {% include modules/product.html data=site.products.classic %}
+</div>
+
+<p class="page-store-call">
+  Não encontrou o que queria? Mande um e-mail para <strong>loja at devnaestrada.com.br</strong> que vamos fazer o possível para atender você!
+</p>
