try to fix the permalink

--- a/mini-loja.html
+++ b/mini-loja.html
@@ -2,7 +2,7 @@
 layout: page
 css_class: mini-loja
 title: ""
-permalink: /mini-loja
+permalink: /mini-loja/
 ---
 <div class="component-store">
   <h2 class="store-subtitle">Camisetas Front-end</h2>
