--- a/lojinha.html
+++ b/lojinha.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-css_class: mini-loja
+css_class: lojinha
 title: ""
-permalink: /mini-loja/
+permalink: /lojinha/
 ---
 <div class="component-store">
   <h2 class="store-subtitle">Camisetas Front-end</h2>
