Update Lojinha to Mercado Livre

--- a/lojinha.html
+++ b/lojinha.html
@@ -1,24 +1,12 @@
 ---
 layout: page
 css_class: lojinha
-title: ""
+title: "Camisetas DNE"
 permalink: /lojinha/
 ---
-<div class="component-store">
-  <h2 class="store-subtitle">Camisetas Front-end</h2>
-  {% include modules/product.html data=site.products.frontend %}
-</div>
 
-<div class="component-store">
-  <h2 class="store-subtitle">Camisetas Back-end</h2>
-  {% include modules/product.html data=site.products.backend %}
-</div>
-
-<div class="component-store">
-  <h2 class="store-subtitle">Camisetas Classic</h2>
-  {% include modules/product.html data=site.products.classic %}
-</div>
+{% include modules/product.html data=site.products %}
 
 <p class="page-store-call">
-  Não encontrou o que queria? Mande um e-mail para <strong>loja at devnaestrada.com.br</strong> que vamos fazer o possível para atender você!
+  O processo de venda e entrega é todo feito pelo Mercado Livre com o Mercado Pago. :)
 </p>
