Added specs for store

--- a/lojinha.html
+++ b/lojinha.html
@@ -7,6 +7,18 @@ permalink: /lojinha/
 
 {% include modules/product.html data=site.products %}
 
+<div class="specs">
+  <h3>Especificacões</h3>
+  <p>(altura x largura - Frente e Costas iguais)</p>
+  <ul>
+    <li>P - 67 x 51 cm</li>
+    <li>M - 71 x 53 cm</li>
+    <li>G - 73 x 55 cm</li>
+    <li>GG - 75 x 57 cm</li>
+    <li>EGG - 78 x 62 cm</li>
+  </ul>
+</div>
+
 <p class="page-store-call">
   O processo de venda e entrega é todo feito pelo Mercado Livre com o Mercado Pago. :)
 </p>
