Remove scripts for search Add new layout and funcionality for Quick Access the episodes Remove the bugs in search module

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% include modules/quick-access.html %}
+
 <div class="page-home">
   {% for post in paginator.posts %}
     <article class="home-cast">
