--- a/pages/comunidades.html
+++ b/pages/comunidades.html
@@ -8,9 +8,8 @@ title: "Comunidades"
   <div class="community-header">
     <h2 class="community-header-title">{{ page.title }}</h2>
     <p class="community-header-description">
-      Projetos para a comunidade que o <strong>DEVNAESTRADA</strong> apoia.
-      <br />
-      Você tem um projeto sensacional, sem fins lucrativos e quer mostrar pra nós? Email para: <strong>montanha [arroba] devnaestrada [.com.br]</strong>
+      Aqui estão listado alguns dos projetos que o <strong>DEVNAESTRADA</strong> apoia.
+      Se você tem um projeto sensacional e sem fins lucrativos, mande para nós: <strong>comunidade [arroba] devnaestrada [.com.br]</strong> ou se preferir abra direto um <a href="https://github.com/devnaestrada/devnaestrada.com.br/pulls">\Pull Request\</a> no Github.
     </p>
   </div>
   <ul class="community-list">
