--- a/pages/comunidades.html
+++ b/pages/comunidades.html
@@ -8,8 +8,8 @@ title: "Comunidades"
   <div class="community-header">
     <h2 class="community-header-title">{{ page.title }}</h2>
     <p class="community-header-description">
-      Aqui estão listado alguns dos projetos que o <strong>DEVNAESTRADA</strong> apoia.
-      Se você tem um projeto sensacional e sem fins lucrativos, mande para nós: <strong>comunidade [arroba] devnaestrada [.com.br]</strong> ou se preferir abra direto um <a href="https://github.com/devnaestrada/devnaestrada.com.br/pulls">\Pull Request\</a> no Github.
+      Aqui estão listados alguns dos projetos que o <strong>DEVNAESTRADA</strong> apoia.
+      Se você tem um projeto open source que acha sensacional e que seja sem fins lucrativos, pode mandar direto para: <strong>comunidade [arroba] devnaestrada [.com.br]</strong> ou se preferir abre direto um <a href="https://github.com/devnaestrada/devnaestrada.com.br/pulls">\Pull Request\</a> no Github que a gente analiza.
     </p>
   </div>
   <ul class="community-list">
