--- a/pages/comunidades.html
+++ b/pages/comunidades.html
@@ -9,7 +9,7 @@ title: "Comunidades"
     <h2 class="community-header-title">{{ page.title }}</h2>
     <p class="community-header-description">
       Aqui estão listados alguns dos projetos que o <strong>DEVNAESTRADA</strong> apoia.
-      Se você tem um projeto open source que acha sensacional e que seja sem fins lucrativos, pode mandar direto para: <strong>comunidade [arroba] devnaestrada [.com.br]</strong> ou se preferir abre direto um <a href="https://github.com/devnaestrada/devnaestrada.com.br/pulls">\Pull Request\</a> no Github que a gente analiza.
+      Se você tem um projeto open source que acha sensacional e que seja sem fins lucrativos, pode mandar direto para: <strong>comunidade [arroba] devnaestrada [.com.br]</strong> ou se preferir abre direto um <a href="https://github.com/devnaestrada/devnaestrada.com.br/pulls">\Pull Request\</a> no Github que a gente analisa.
     </p>
   </div>
   <ul class="community-list">
