--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
         de {{ post.date | date: "%Y" }} =>  <span class="episode-type">{{ post.type }}</span>
       </p>
       <div class="episode-holder">
-        <img class="episode-artwork" src="http://i1.sndcdn.com/artworks-{{ post.soundcloud-post-image }}-large.jpg" alt="{{ post.home-title }}" />
+        <img class="episode-artwork" src="https://assets.libsyn.com/secure/show/104268/artworks-{{ post.soundcloud-post-image }}-original.jpg" alt="{{ post.home-title }}" />
         <a href="{{ post.url }}" class="episode-link">
           <h1 class="episode-title">{{ post.title }}</h1>
         </a>
