fix wrong month name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
           {% when '7' %}Julho
           {% when '8' %}Agosto
           {% when '9' %}Setembro
-          {% when '10' %}Outrubro
+          {% when '10' %}Outubro
           {% when '11' %}Novembro
           {% when '12' %}Dezembro
         {% endcase %}
