Added subject field in contact form

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -19,6 +19,17 @@ permalink: /contato/
     <input class="input" type="email" name="_replyto" required />
   </div>
   <div class="input-wrap">
+    <label class="input-label">Assunto</label>
+    <select class="select" name="_subject" required>
+      <option value="contato">Contato</option>
+      <option value="recomendacao-pauta">Recomendação de pauta</option>
+      <option value="recomendacao-entrevistado">Recomendação de entrevistado</option>
+      <option value="criticas-sugestoes">Críticas e/ou sugestões</option>
+      <option value="patrocinios">Patrocínios</option>
+      <option value="doacoes">Doações</option>
+    </select>
+  </div>
+  <div class="input-wrap">
     <label class="input-label">Mensagem</label>
     <textarea class="textarea" name="textarea" required></textarea>
   </div>
